# LangChain-Actual-Combat

./: pyproject.toml
chapter01/: main_chat.py  main_langchain_text.py
chapter02/: doc_qa.py  note.md
chapter03/: flowers_with_descriptions.csv  note.md  prompt_engineering.py
chatpter01/: main.py  main_langchain_text.py  note.md
