[project]
name = "langchain-chapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepseek>=1.0.0",
    "docx2txt>=0.9",
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.27",
    "openai>=1.93.0",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.3",
    "uvicorn>=0.35.0",
]
